--- a/src/componentes/CampoTexto/CampoTexto.css
+++ b/src/componentes/CampoTexto/CampoTexto.css
@@ -6,6 +6,7 @@
     display: block;
     margin-bottom: 8px;
     font-size: 24px;
+    color: #1d0303;
 }
 
 .campo-texto input {
@@ -16,4 +17,5 @@
     font-size: 24px;
     padding: 24px;
     box-sizing: border-box;
+    color: #1d0303;
 }
