--- a/src/componentes/ListaSuspensa/ListaSuspensa.css
+++ b/src/componentes/ListaSuspensa/ListaSuspensa.css
@@ -1,15 +1,17 @@
-.Lista-suspensa label{
+.lista-suspensa label {
     display: block;
     margin-bottom: 8px;
     font-size: 24px;
+    color: #1d0303;
 }
 
-.Lista-suspensa select {
-    background-color: #fff;
+.lista-suspensa select {
+    background-color: #FFF;
     box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.06);
     width: 100%;
     border: none;
     font-size: 24px;
     padding: 24px;
     box-sizing: border-box;
+    color: #1d0303;
 }
